--- a/AutoMapperNewtonSoftJsonTests.NUnit/AutoMapperNewtonSoftJsonTests.NUnit.csproj
+++ b/AutoMapperNewtonSoftJsonTests.NUnit/AutoMapperNewtonSoftJsonTests.NUnit.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="AutoMapperCloneTests.cs" />
     <Compile Include="NewtonsoftCloneTests.cs" />
+    <Compile Include="ManualCloneTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleTestData.cs" />
   </ItemGroup>
